--- a/src/assets/sass/templates/_results.scss
+++ b/src/assets/sass/templates/_results.scss
@@ -56,6 +56,7 @@
     display: grid;
     grid-template-columns: 0.9fr 1.4fr;
     gap: 10px;
+    margin-top: 15px;
   }
 
   &-group {
@@ -79,10 +80,6 @@
     min-width: auto;
     width: 80px;
   }
-}
-
-#results-block {
-  margin-top: 50px;
 }
 
 .data-container {
@@ -138,4 +135,166 @@
 }
 .govuk-pagination__item--current:hover {
   background-color: #00703c;
+}
+
+.govuk-button {
+  &--map {
+    @include font-style-stack(24px, 32px, 700);
+    height: 45px;
+    display: inline-flex;
+    min-height: auto;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.map-view-block {
+  width: 80%;
+  height: 100vh;
+}
+
+.filter-view-block {
+  width: 20%;
+}
+
+.defra-map {
+  &-controls {
+    position: absolute;
+    width: 80%;
+    z-index: 1;
+    overflow: hidden;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    pointer-events: none;
+    right: 0px;
+
+    &__bottom {
+      position: absolute;
+      left: 10px;
+      bottom: 10px;
+      right: 10px;
+      pointer-events: none;
+    }
+
+    &__bottom * {
+      pointer-events: auto;
+    }
+  }
+
+  &__exit {
+    @include font-style-stack(24px, 32px, 300, normal, true);
+    float: left;
+    position: relative;
+    margin: 10px 0px 0px 10px;
+    border: 0;
+    padding: 10px;
+    width: 40px;
+    cursor: pointer;
+    background-color: govuk-colour("white");
+    text-decoration: none;
+    color: govuk-colour("black");
+    pointer-events: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
+    svg {
+      display: inline-block;
+      margin-right: 15px;
+      vertical-align: top;
+    }
+
+    span {
+      vertical-align: top;
+    }
+  }
+
+  &-reset {
+    float: right;
+    position: relative;
+    border: 0;
+    height: 50px;
+    width: 50px;
+    padding: 0;
+    cursor: pointer;
+    background-color: govuk-colour("white");
+    color: govuk-colour("black");
+    display: none;
+
+    &:hover {
+      background-color: govuk-colour("light-grey");
+    }
+  }
+
+  &-zoom {
+    display: none;
+
+    &-in,
+    &-out {
+      display: flex;
+      align-items: center;
+      position: relative;
+      border: 0;
+      height: 50px;
+      width: 50px;
+      padding: 0;
+      cursor: pointer;
+      background-color: govuk-colour("white");
+      color: govuk-colour("black");
+
+      &:hover {
+        background-color: govuk-colour("light-grey");
+      }
+    }
+  }
+}
+
+@media (min-width: 40.0625em) {
+  .defra-map-zoom {
+    display: block;
+    float: right;
+    clear: right;
+    width: 50px;
+    height: auto;
+    margin-top: 15px;
+  }
+}
+
+@media (min-width: 52.1875em) {
+  .defra-map {
+    &__exit {
+      width: auto;
+      padding-right: 11px;
+    }
+  }
+}
+
+.govuk-checkboxes__input {
+  width: 26px;
+  height: 26px;
+  margin-left: 2px;
+  margin-top: 5px;
+}
+
+.defra-checkboxes {
+  @include font-style-stack(16px, 20px, 300);
+  &__label {
+    display: flex;
+    align-items: center;
+
+    &::before {
+      top: 5px;
+      width: 28px;
+      height: 28px;
+    }
+
+    &::after {
+      top: 12px;
+      left: 7px;
+      width: 19px;
+      border-width: 0 0 4px 4px;
+      height: 10px;
+    }
+  }
 }
