--- a/src/views/partials/go_to_resource/modal.njk
+++ b/src/views/partials/go_to_resource/modal.njk
@@ -2,6 +2,8 @@
 
 {% from 'govuk/components/button/macro.njk' import govukButton %}
 
+{% set extraClass = ' resource-modal'%}
+
 {% block modalContent %}
   <div class='data-container'>
     <h1 class='govuk-heading-l data-container__heading-l govuk-!-margin-bottom-0'>You are about to leave Natural Capital Search Service</h1>
