--- a/src/views/partials/modal/template.njk
+++ b/src/views/partials/modal/template.njk
@@ -1,4 +1,5 @@
-<div id="modal" class="modal">
+{% block beforeModalContent %}{% endblock %}
+<div id="modal" class="modal{{extraClass}}">
   <div class="modal-content">
     {% block modalContent %}{% endblock %}
   </div>
