--- a/src/views/partials/quick_search/template.njk
+++ b/src/views/partials/quick_search/template.njk
@@ -13,8 +13,7 @@
       <span class="govuk-caption-m quick_search-container__caption-m">You can search by keyword, theme, title or project code, for example: "hedgehog population Bristol", "Community Supported Fisheries", "AE0101".</span>
     {% endif %}
     <div class="search-block" data-module="search">
-      <form action="{{params.searchPath}}" id="{{params.formId}}" data-do-browser-storage method="post" role="search" class="search-block__form govuk-!-margin-bottom-6 govuk-!-margin-top-4">
-
+      <form action="{{params.searchPath}}" id="{{params.formId}}" data-do-browser-storage method="post" role="search" class="search-block__form govuk-!-margin-top-4">
         {{ govukInput({
           id: 'search_term',
           name: 'search_term',
@@ -34,9 +33,13 @@
           value: params.searchTerm,
           attributes: {
             'aria-controls': 'search-results',
-            'placeholder': 'Search'
+            'placeholder': 'Search',
+            'altName': 'q'
           },
-          errorMessage: params.searchInputError
+          errorMessage: params.searchInputError,
+          formGroup: {
+            classes: 'govuk-!-margin-bottom-4'
+          }
         }) }}
         <input type="hidden" name="pageName" value="{% if not params.isResultPage %}home{% else %}results{% endif %}">
       </form>
