--- a/src/views/screens/details/template.njk
+++ b/src/views/screens/details/template.njk
@@ -6,7 +6,7 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
 {% from 'partials/details/macro.njk' import details %}
-{% from 'partials/go_to_resource/macro.njk' import openData %}
+{% from 'partials/go_to_resource/macro.njk' import goToResource %}
 
 {% block head %}
   {{ super() }}
@@ -64,7 +64,7 @@
     {% endif %}
 
     <div {% if not docDetails.resourceLocator %} class="open-data-block--disabled" {% endif %}>
-      {{ openData({ organisationName: docDetails.organisationName, resourceLocator: docDetails.resourceLocator, isDetailsPage: true }) }}
+      {{ goToResource({ organisationName: docDetails.organisationName, resourceLocator: docDetails.resourceLocator, isDetailsPage: true }) }}
       {% if not docDetails.resourceLocator %}
         <span class="open-data-block--tag">Access to this data resource is by application to the owner - please refer to access tab for further details</span>
       {% endif %}
@@ -138,7 +138,7 @@
   <script>
     var isDetails = true;
     var markers = '';
-    var center = '0, 0';
+    var center = '0,0';
     {% if docDetails !== undefined %}
       markers = "{{docDetails.geographicMarkers | safe}}"
       center = "{{docDetails.geographicCenter | safe}}";
@@ -146,5 +146,5 @@
   </script>
   <script type="module" src="{{ assetPath }}/scripts/dataModal.js"></script>
   <script src="{{ assetPath }}/scripts/ol.js"></script>
-  <script type="module" src="{{ assetPath }}/scripts/renderMapToDrawPolygon.js"></script>
+  <script type="module" src="{{ assetPath }}/scripts/location.js"></script>
 {% endblock %}
