--- a/src/views/screens/results/template.njk
+++ b/src/views/screens/results/template.njk
@@ -4,6 +4,11 @@
 {% from "govuk/components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
+{% block head %}
+  {{ super() }}
+  <link rel="stylesheet" href="{{ assetPath }}/css/ol.css">
+{% endblock %}
+
 {% block beforeContent %}
   {{ super() }}
   {{ govukBreadcrumbs({
@@ -34,9 +39,12 @@
 
   {%if searchInputError === undefined %}
     <div class="govuk-grid-row">
-      <div class="govuk-grid-column-one-third" id="filter-block" data-action="{{routes.getFilters}}" data-fetch-filters>&nbsp;</div>
-      <div class="govuk-grid-column-two-thirds" id="results-block" data-action="{{routes.getResults}}" data-fetch-results>
-        <p class="govuk-caption-m govuk-!-font-size-14">Your search request is being served...</p>
+      {% include 'partials/results/map_results.njk' %}
+    </div>
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-one-third">{% include 'partials/results/filters.njk' %}</div>
+      <div class="govuk-grid-column-two-thirds">
+        {% include 'partials/results/summary.njk' %}
       </div>
     </div>
   {% endif %}
@@ -46,4 +54,9 @@
 {% block bodyEnd %}
   {{ super() }}
   <script type="module" src="{{ assetPath }}/scripts/dataModal.js"></script>
+  <script src="{{ assetPath }}/scripts/ol.js"></script>
+  <script>
+    var isViewMapResults = true;
+  </script>
+  <script type="module" src="{{ assetPath }}/scripts/location.js"></script>
 {% endblock %}
