--- a/public/css/application.css
+++ b/public/css/application.css
@@ -7608,7 +7608,7 @@
 }
 
 .banner-container {
-  padding-top: 30px;
+  padding-top: 14px;
   padding-bottom: 30px;
 }
 .banner-container__heading-xl {
@@ -7626,11 +7626,17 @@
   line-height: 30px;
   color: #ffffff;
 }
+.banner-container__ncea-logo {
+  height: 88px;
+  gap: 0px;
+  opacity: 0px;
+  margin-left: -16px;
+}
 
-.video-container {
+.educational-copy-container {
   margin-bottom: 40px;
 }
-.video-container__heading-m {
+.educational-copy-container__heading-m {
   font-size: 1.5rem;
   font-style: normal;
   font-weight: 700;
@@ -7641,105 +7647,12 @@
   margin: 0px;
   border-top: 1.5px solid #b1b4b6;
 }
-.video-container__frame {
-  position: relative;
-  padding-bottom: 33%;
-  padding-top: 35px;
-  height: 0;
-  overflow: hidden;
-}
-.video-container__frame iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-@media screen and (max-width: 799px) {
-  .video-container__frame iframe {
-    width: 100%;
-    height: 100%;
-  }
-}
 
 @media only screen and (min-width: 769px) {
   .header-container {
     display: block;
   }
 }
-.header-container .header-main {
-  color: #0b0c0c;
-  padding: 0.5rem 0px;
-  border-bottom: 6px solid #008938;
-  background: #ffffff !important;
-}
-
-.header-div-container {
-  width: 100%;
-}
-
-.header-container .header-main .site-width-container {
-  -webkit-box-pack: justify;
-  justify-content: space-between;
-}
-
-@media only screen and (min-width: 1020px) {
-  .header-div-container .site-width-container {
-    width: 100%;
-    margin: 0px auto;
-    max-width: 960px;
-    padding: 0px;
-  }
-}
-.header-div-container .site-width-container {
-  display: flex;
-  flex-direction: row;
-  width: auto;
-  padding: 0px 16px;
-}
-
-.header-logo-container {
-  display: flex;
-  -webkit-box-align: center;
-  align-items: center;
-}
-
-.header-logo-container .defra-logo {
-  padding-left: 2px;
-  border-left: 2px solid #00703c;
-}
-
-.header-logo-container a, .header-logo-container a:visited, .header-logo-container a:link {
-  margin-left: 0.5rem;
-  color: #0b0c0c;
-  text-decoration: none;
-}
-
-.header-logo-link {
-  font-family: GDS Transport, Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-}
-
-@media only screen and (min-width: 641px) {
-  .logo-link {
-    font-size: 19px;
-  }
-}
-.logo-link {
-  color: #008938;
-  font-size: 16px;
-}
-
-.header-logo-container .defra-logo-text {
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 1.35;
-}
-
-.header-logo-container .govuk-header__service-name {
-  font-size: 18px;
-  margin-bottom: 0px;
-  padding-left: 6em;
-}
-
 @media (min-width: 40.0625em) {
   .govuk-header__link--service-name, .govuk-header__service-name {
     font-size: 24px;
@@ -7757,6 +7670,7 @@
   font-size: 18px;
   font-size: 1.125rem;
   line-height: 1.1111111111;
+  margin-top: 1%;
 }
 
 .govuk-tag.govuk-phase-banner__content__tag {
