--- a/src/assets/sass/templates/_home.scss
+++ b/src/assets/sass/templates/_home.scss
@@ -7,7 +7,7 @@
 }
 
 .banner-container {
-  padding-top: 30px;
+  padding-top: 14px;
   padding-bottom: 30px;
 
   &__heading-xl {
@@ -20,9 +20,16 @@
     @include font-style-stack(19px, 30px, 300);
     color: govuk-colour('white');
   }
+
+  &__ncea-logo{
+    height: 88px;
+    gap: 0px;
+    opacity: 0px;
+    margin-left: -16px;
+  }
 }
 
-.video-container {
+.educational-copy-container {
   margin-bottom: 40px;
 
   &__heading-m {
@@ -32,26 +39,5 @@
     padding-bottom: 30px;
     margin: 0px;
     border-top: 1.5px solid $govuk-border-colour;
-  }
-
-  &__frame {
-    position: relative;
-    padding-bottom: 33%;
-    padding-top: 35px;
-    height: 0;
-    overflow: hidden;
-
-    iframe {
-      position: absolute;
-      top: 0;
-      left: 0;
-    }
-
-    @media screen and (max-width: 799px) {
-      iframe {
-        width: 100%;
-        height: 100%;
-      }
-    }
   }
 }
