--- a/src/views/partials/go_to_resource/template.njk
+++ b/src/views/partials/go_to_resource/template.njk
@@ -7,7 +7,7 @@
 {% endif %}
 
 {% set openDataAttributes = {} %}
-{% if params.resourceLocator %}
+{% if params.resourceLocator and params.organisationName%}
   {% set openDataAttributes = openDataAttributes | merge({
     onclick: "openDataModal('" + params.organisationName + "', '" + params.resourceLocator + "')"
   }) %}
