354239 - Map result highlight and result information modal popup (#48)
* 311821 - Fixing the coordinates elastisearch query issue

* 311821 - Encrypting the document URL with ID and Index

* 311821 - initial set of changes with API, unit test case and default tab view

* 311821 - Fixing the tab content with macro

* 311821 - Fixing the open data with message when disabled and unit test cases

* 311821 - Fixing the study period date string and the related test cases

* 311821 - Fixing the failed test cases

* 311821 - Refactored the code to display value with different options

* 311821 - Fixing the sonar issues and added one more test case

* 335172 - Fixing the change in the AC

* 335172 - Design fix

* 311821 - Fixed review comments and refactored the code

* 335172 - Fixing the rowsPerPage value to numeric

* 311821 - Fixing the rowsPerPage value to numeric

* 311821 - Fixing the review comments

* 335172 - Merged with the latest code

* 337310 - Added the Alternate Title property but the response property still unknown(WIP)

* 337310 - Added unit test cases with TODO comment, need to update this later

* 335172 - Change in fetching the organisation details

* 335172 - Updated the code to display the organisation name on the results and modal based on the rolset

* 335172 - Fixed failed test cases

* 337232 - Implemented the Quality tab content (WIP)

* 337232 - Implemented the conformity field table structure

* 337232 - Fixing the sonnar issue with optinal chain expression

* 335172 - Implementing the PR review comments

* 337232 - Updating the test cases for Additional information field under qualty tab

* 338401 - Intitial set of changes (WIP)

* 338041 - Fixing the Geography tab data

* 347554 - Showing the static polygon and marker

* 347554 - Fixing the styles

* 347554 - Removing the unncessary code

* 347554 - Fixing the typo issue

* 347554 - Fixing the format issue

* 347554 - Fixing the

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -7964,6 +7964,47 @@
 .defra-map-zoom-in:hover, .defra-map-zoom-out:hover {
   background-color: #f3f2f1;
 }
+.defra-map-info {
+  position: absolute;
+  background-color: #ffffff;
+  bottom: 15px;
+  left: 15px;
+  border: 2px solid #0b0c0c;
+  padding: 10px;
+  display: none;
+  width: 320px;
+}
+.defra-map-info__container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.defra-map-info__title-block {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+.defra-map-info__title-block h2 {
+  font-family: "GDS Transport", arial, sans-serif;
+  font-size: 1.1875rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 25px;
+  width: 295px;
+  word-wrap: break-word;
+}
+.defra-map-info__close {
+  cursor: pointer;
+}
+.defra-map-info__content {
+  margin: 0;
+  color: #0b0c0c;
+  font-family: "GDS Transport", arial, sans-serif;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 20px;
+}
 
 @media (min-width: 40.0625em) {
   .defra-map-zoom {
