--- a/src/assets/sass/templates/_results.scss
+++ b/src/assets/sass/templates/_results.scss
@@ -248,6 +248,45 @@
       }
     }
   }
+
+  &-info {
+    position: absolute;
+    background-color: govuk-colour("white");
+    bottom: 15px;
+    left: 15px;
+    border: 2px solid govuk-colour("black");
+    padding: 10px;
+    display: none;
+    width: 320px;
+
+    &__container {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    &__title-block {
+      display: flex;
+      align-items: flex-start;
+      justify-content: space-between;
+
+      h2 {
+        @include font-style-stack(19px, 25px, 700, normal, true);
+        width: 295px;
+        word-wrap: break-word;
+      }
+    }
+
+    &__close {
+      cursor: pointer;
+    }
+
+    &__content {
+      margin: 0;
+      color: $govuk-text-colour;
+      @include font-style-stack(16px, 20px, 300, normal, true);
+    }
+  }
 }
 
 @media (min-width: 40.0625em) {
