--- a/src/views/screens/home/template.njk
+++ b/src/views/screens/home/template.njk
@@ -15,7 +15,7 @@
 
   {{ quickSearch({
     searchPath: routes.searchResults,
-    formId: formId,
+    formId: quickSearchFID,
     isResultPage: false,
     searchInputError : searchInputError
   }) }}
