--- a/src/assets/sass/templates/_results.scss
+++ b/src/assets/sass/templates/_results.scss
@@ -284,6 +284,7 @@
     &__content {
       margin: 0;
       color: $govuk-text-colour;
+      word-wrap: break-word;
       @include font-style-stack(16px, 20px, 300, normal, true);
     }
   }
@@ -336,4 +337,112 @@
       height: 10px;
     }
   }
+}
+
+.defra-filter-section {
+  select {
+    max-width: 120px;
+    min-width: 95px;
+  }
+}
+
+.defra-filter-options {
+  position: relative;
+
+  &__heading {
+    position: relative;
+    padding: 10px 8px 5px 32px;
+    margin: 0;
+    cursor: pointer;
+  }
+
+  &__title {
+    @include font-style-stack(19px, 25px, 300, normal, true);
+    cursor: pointer;
+    color: $govuk-link-colour;
+  }
+
+  &__button {
+    background: none;
+    border: 0;
+    text-align: left;
+    padding: 0;
+
+    &:after {
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      z-index: 2;
+    }
+
+    &:focus {
+      outline: none;
+      text-decoration: none;
+      color: $govuk-input-border-colour;
+      background-color: $govuk-focus-colour;
+      box-shadow:
+        0 -2px $govuk-focus-colour,
+        0 4px $govuk-link-active-colour;
+      -webkit-box-decoration-break: clone;
+      box-decoration-break: clone;
+    }
+
+    &:hover {
+      text-decoration: underline;
+      text-underline-offset: 0.3em;
+      text-decoration-thickness: max(3px, 0.1875rem, 0.12em);
+      -webkit-text-decoration-skip-ink: none;
+      text-decoration-skip-ink: none;
+      -webkit-text-decoration-skip: none;
+    }
+  }
+
+  &__icon {
+    display: none;
+    position: absolute;
+    top: 3px;
+    left: 0;
+    width: 30px;
+    height: 40px;
+    fill: $govuk-text-colour;
+  }
+
+  &__container {
+    position: relative;
+    max-height: 200px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    background-color: govuk-colour("white");
+
+    &::-webkit-scrollbar {
+      -webkit-appearance: none;
+      width: 7px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      border-radius: 4px;
+      background-color: rgba(0, 0, 0, 0.5);
+      -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, 0.87);
+    }
+
+    &--inner {
+      padding: 5px 5px 0;
+    }
+  }
+}
+
+.defra-filter-options__heading--closed .defra-filter-options__icon--down,
+.defra-filter-options__heading--open .defra-filter-options__icon--up {
+  display: block;
+}
+
+.defra-filter-options--closed .defra-filter-options__container {
+  display: none;
+}
+
+.defra-filter-options--open .defra-filter-options__container {
+  display: block;
 }
