367800 - Feedback from show and tell geography map view (#51)
* 311821 - Fixing the coordinates elastisearch query issue

* 311821 - Encrypting the document URL with ID and Index

* 311821 - initial set of changes with API, unit test case and default tab view

* 311821 - Fixing the tab content with macro

* 311821 - Fixing the open data with message when disabled and unit test cases

* 311821 - Fixing the study period date string and the related test cases

* 311821 - Fixing the failed test cases

* 311821 - Refactored the code to display value with different options

* 311821 - Fixing the sonar issues and added one more test case

* 335172 - Fixing the change in the AC

* 335172 - Design fix

* 311821 - Fixed review comments and refactored the code

* 335172 - Fixing the rowsPerPage value to numeric

* 311821 - Fixing the rowsPerPage value to numeric

* 311821 - Fixing the review comments

* 335172 - Merged with the latest code

* 337310 - Added the Alternate Title property but the response property still unknown(WIP)

* 337310 - Added unit test cases with TODO comment, need to update this later

* 335172 - Change in fetching the organisation details

* 335172 - Updated the code to display the organisation name on the results and modal based on the rolset

* 335172 - Fixed failed test cases

* 337232 - Implemented the Quality tab content (WIP)

* 337232 - Implemented the conformity field table structure

* 337232 - Fixing the sonnar issue with optinal chain expression

* 335172 - Implementing the PR review comments

* 337232 - Updating the test cases for Additional information field under qualty tab

* 338401 - Intitial set of changes (WIP)

* 338041 - Fixing the Geography tab data

* 347554 - Showing the static polygon and marker

* 347554 - Fixing the styles

* 347554 - Removing the unncessary code

* 347554 - Fixing the typo issue

* 347554 - Fixing the format issue

* 347554 - Fixing the failed t

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -7695,6 +7695,27 @@
   justify-content: flex-end;
 }
 
+.defra-map-clear-selection__block {
+  display: none;
+  width: 150px;
+}
+.defra-map-clear-selection__link {
+  font-family: "GDS Transport", arial, sans-serif;
+  font-size: 1.1875rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 25px;
+  display: flex;
+  align-items: center;
+  color: #1d70b8 !important;
+}
+.defra-map-clear-selection__link:hover {
+  color: #003078 !important;
+}
+.defra-map-clear-selection__link:focus {
+  color: #003078 !important;
+}
+
 .search-result__item {
   display: flex;
   flex-direction: column;
