Features/378243 build privacy policy content page (#62)
* feat: GTM tracking

* Privacy policy changes

* help page style fixes

--- a/src/views/screens/home/help.njk
+++ b/src/views/screens/home/help.njk
@@ -23,13 +23,12 @@
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
-    <h1 class="govuk-heading-m ncea-static-page__heading-m">Help</h1>
-    <p class="govuk-body-s">Contact the Natural Capital and Ecosystem Assessment (NCEA) programme for help with the Natural Capital Search Service. </p>
+    <h1 class="govuk-heading-xl ncea-static-page__heading-m">Help</h1>
+    <p class="govuk-body-m">Contact the Natural Capital and Ecosystem Assessment (NCEA) programme for help with the Natural Capital Search Service. </p>
     <h1 class="govuk-heading-s">Email</h1>
-    <a class="govuk-link help-link" href="mailto: NCEAemail@email.com">NCEAemail@email.com</a>
-    <p class="govuk-body-s"></p>
+    <p class="govuk-body-m"><a class="govuk-link help-link" href="mailto: NCEAemail@email.com">NCEAemail@email.com</a></p>
     <h1 class="govuk-heading-s">Learn about the NCEA</h1>
-    <p class="govuk-body-s">
+    <p class="govuk-body-m">
     To find out more about the NCEA programme, <a href="https://www.gov.uk/government/publications/natural-capital-and-ecosystem-assessment-programme/natural-capital-and-ecosystem-assessment-programme" rel="noreferrer noopener" target="_blank" class="govuk-link help-link">read more on our GOV.UK page.</a>
     </p>
 </div>
